# MNIST_lab

./: .gitignore  README.md  best_mnist_cnn.pth  main.py  part1_classical_ml_complete.py  part2_cnn_complete.py  part3_transfer_complete.py  pyproject.toml  requirements.txt  utils.py
